Added more tests and fixed some broken tests. They should all work now.